<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.main.SettingsActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="24dp">

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/inputSenderGmailEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senders_gmail_email"
                    android:text="@{vm.sendersGmailEmail}"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/inputSenderGmailPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senders_gmail_password"
                    android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction"/>

        <Button
                android:id="@+id/buttonGmailSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gmail_settings"
                android:layout_marginBottom="12dp"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/inputReceiverEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/receivers_email_address"
                    android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <Button
                android:id="@+id/buttonTest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:layout_marginTop="16dp"/>

        <Button
                android:id="@+id/buttonStartStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"/>

    </LinearLayout>

</ScrollView>